# xml-fundamend-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  domain-specific-terms.txt  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: benchmark.yml  coverage.yml  dev_test.yml  formatting.yml  no_byte_order_mark.yml  packaging_test.yml  python-publish.yml  pythonlint.yml  unittests.yml
benchmarks/: __init__.py  conftest.py  test_diff_query.py
dev_requirements/: requirements-packaging.txt  requirements-pydantic.txt  requirements-tests.txt  requirements-type_check.txt
docs/plans/: 2026-01-07-mig-sqlmodels-design.md
json_schemas/: Anwendungshandbuch.schema.json  MessageImplementationGuide.schema.json  generate_json_schemas.py
scripts/: compare_benchmarks.py
src/: _fundamend_version.py
src/bamx/models/: __init__.py  messageimplementationguide.py
src/bamx/reader/: migreader.py
src/fundamend/: __init__.py  __main__.py  cli.py  sanitize.py  utils.py
src/fundamend/commands/: __init__.py  app.py  xml2json.py
src/fundamend/models/: __init__.py  _dataclass_wrapper.py  anwendungshandbuch.py  base.py  kommunikationsrichtung.py  messageimplementationguide.py
src/fundamend/reader/: __init__.py  ahbreader.py  element_distinction.py  migreader.py
src/fundamend/sqlmodels/: __init__.py  ahb_diff_view.py  ahbesser_view.py  ahbtabellen_view.py  ahbview.py  anwendungshandbuch.py  create_ahb_diff_view.sql  create_ahb_expressions_table.sql  create_ahbesser_view.sql  create_ahbtabellen_view.sql  create_mig_diff_view.sql  expression_view.py  internals.py  materialize_ahb_view.sql  materialize_mig_view.sql  messageimplementationguide.py  mig_diff_view.py  migview.py
unittests/: conftest.py  example_ahb_utilts_11c.py  example_ahb_utilts_11d.py  example_migs.py  test_ahb_diff_view.py  test_ahb_serialisierung.py  test_ahbesser_view.py  test_ahbreader.py  test_cli.py  test_mig_views.py  test_migreader.py  test_pydantic_features.py  test_sanitization.py  test_sqlmodels_anwendungshandbuch.py  test_sqlmodels_expressions_view.py  test_sqlmodels_messageimplementationguide.py  test_utils.py  text_missing_lines_with_duplicate_data_element_id.py
unittests/__snapshots__/: test_ahb_diff_view.ambr  test_ahbesser_view.ambr  test_ahbreader.ambr  test_mig_views.ambr  test_migreader.ambr  test_sqlmodels_anwendungshandbuch.ambr  test_sqlmodels_expressions_view.ambr
unittests/example_files/: README.md  UTILTS_AHB_1.1c_Lesefassung_2023_12_12_ZPbXedn.xml  UTILTS_AHB_1.1d_Konsultationsfassung_2024_04_02.xml  UTILTS_AHB_1.1d_Konsultationsfassung_2024_04_02_with_Uebertragungsdatei.xml  UTILTS_AHB_1_0_Fehlerkorrektur_20250218.xml  UTILTS_MIG_1.1c_Lesefassung_2023_12_12.xml  UTILTS_MIG_1.1d_Konsultationsfassung_2024_04_02.xml  UTILTS_MIG_1.1d_Konsultationsfassung_2024_04_02_with_Uebertragungsdatei.xml  UTILTS_MIG_1.1d_Konsultationsfassung_2024_04_02_with_Uebertragungsdatei_with_UNA_and_UNB.xml  UTILTS_MIG_1_1e_Fehlerkorrektur_20241018.xml
