[project]
name = "fundamend"
description = "XML basierte Formate und DatemModelle für die Energiewirtschaft in Deutschland"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info+github@hochfrequenz.de" }]
keywords = ["BDEW", "XML", "AHB", "MIG", "Marktkommunikation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2",
    "efoli>=2.0.0"
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
sqlmodels = [
  "sqlmodel>=0.0.22",
  "sqlalchemy[mypy]>=2.0.37"
]
ahbicht = [
    "ahbicht>=0.16.0"
]
coverage = [
    "coverage==7.9.1"
]
formatting = [
    "black==25.1.0",
    "isort==6.0.1"
]
linting = [
    "pylint==3.3.7"
]
cli = [
    "typer" # if you install fundamend[cli], the cli commands are available via typer
]
spellcheck = [
    "codespell==2.4.1"
]
test_packaging = [
    "build==1.2.2.post1",
    "twine==6.1.0"
]
tests = [
    "pytest==8.4.1",
    "syrupy==4.9.1"
]
type_check = [
    "mypy==1.16.1"
]


[project.urls]
Changelog = "https://github.com/Hochfrequenz/xml-fundamend-python/releases"
Homepage = "https://github.com/Hochfrequenz/xml-fundamend-python"

[tool.black]
line-length = 120
target_version = ["py311", "py312", "py313"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120

[tool.pytest.ini_options]
markers = ["snapshot: mark a test as a snapshot test"]

[project.scripts]
xml2json = "fundamend.__main__:main"
# fundamend is the package in the src directory
# With no further specification, the entry point is fundamend.__main__ which is then called as main script

[mypy]
truethy-bool = true

[tool.mypy]
disable_error_code = []

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
python="3.12"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_fundamend_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
include = [
    "src/fundamend/sqlmodels/*.sql",
]
